Fix content container spacing on small screen

--- a/src/components/app.css
+++ b/src/components/app.css
@@ -16,6 +16,10 @@ body {
   );
 }
 
+#root {
+  height: 90%;
+}
+
 button:active {
   background-color: #b2b2b2;
 }
@@ -70,6 +74,7 @@ button {
   margin: 4vw;
   padding: 2vw;
   background-color: white;
+  height: 100%;
   max-height: 90vh;
   border-radius: 8px;
 }
@@ -80,6 +85,7 @@ button {
   max-width: 100vw;
   min-height: 70vh;
   max-height: 95vh;
+  height: 100%;
 
   /* gap: 3vw; */
 }
@@ -90,6 +96,7 @@ button {
   padding: 2vw;
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 
 .cardlist--card {
@@ -206,10 +213,14 @@ button {
 }
 
 @media screen and (max-width: 480px) {
+  #root {
+    height: 100%;
+  }
   .container--main {
     margin: 2vw;
     padding: 2vw;
     max-height: 100%;
+    height: 97%;
   }
 
   .modal--container {
@@ -225,6 +236,7 @@ button {
 
   .content--container {
     flex-direction: column-reverse;
+    justify-content: space-between;
   }
 
   .content--cardsList h2 {
@@ -236,6 +248,8 @@ button {
     overflow: scroll;
     align-items: flex-start;
     min-width: 80vw;
+    max-width: 100%;
+    height: auto;
     gap: 10px;
   }
   .content--cardsList--card {
